fix: add ellipsis to overflow column titles

--- a/singolo1.css
+++ b/singolo1.css
@@ -222,6 +222,9 @@
   font-weight: 900;
   font-size: 18px;
   letter-spacing: -0.1px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .column__content {
